# ESP32-WiFiManager

./: CMakeLists.txt  README.md  idf_component.yml
examples/basic/: CMakeLists.txt  sdkconfig.defaults
examples/basic/main/: CMakeLists.txt  main.cpp
include/esp32_wifi_manager/: CaptivePortalDns.hpp  CaptivePortalHttp.hpp  WifiCredentialStore.hpp  WifiManager.hpp  WifiManagerEspIdfAdapter.hpp  WifiManagerEventQueue.hpp  WifiManagerStateMachine.hpp  WifiManagerTask.hpp  WifiManagerTypes.hpp  WifiRetryScheduler.hpp  WifiScanService.hpp
resources/: portal.html
src/: CaptivePortalDns.cpp  CaptivePortalHttp.cpp  WifiCredentialStore.cpp  WifiManager.cpp  WifiManagerEspIdfAdapter.cpp  WifiManagerStateMachine.cpp  WifiManagerTask.cpp  WifiScanService.cpp  portal_html.h
tests/: CMakeLists.txt  WifiManagerStateMachine.test.cpp
